# TradingBot

./: .dockerignore  .env.example  Dockerfile  docker-compose.yml  pyproject.toml
src/: config.py  constants.py  main.py  schemas.py
src/api/: router.py
src/htx/: service.py
src/strategy/: service.py
src/telegram/: service.py
