[project]
name = "tradingbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiogram>=3.27.0",
    "fastapi>=0.136.0",
    "httpx>=0.28.1",
    "pandas>=2.3.3",
    "pydantic-settings>=2.5.0",
    "ruff>=0.15.11",
    "ta>=0.11.0",
    "uvicorn>=0.30.0",
]
